开发分支一创建了一个自己的文件夹以及文件，并对master分支的文件内容做了新增与修改

--- a/src/main/resources/masterBranch1/202109222206.md
+++ b/src/main/resources/masterBranch1/202109222206.md
@@ -1,4 +1,6 @@
 # 版本控制测试文件
 ## 2021年9月22日22点07分 第一次主干分支提交文件
     git就像一棵树，无数开发者就像是树根，共同合作，供养主干分支；
-    同时开发分支又像是树叶，在主干分支中各自建立分支，完成不同功能的开发，开花结果
+    同时开发分支又像是树叶，在主干分支中各自建立分支，完成各种不同功能的开发，开花结果
+## 2021年9月22日22点14分
+    开发分支1的开发者为master分支的文件新增了一段内容，并修改了一段代码
