--- a/src/main/resources/masterBranch1/202109222206.md
+++ b/src/main/resources/masterBranch1/202109222206.md
@@ -1,6 +1,10 @@
 # 版本控制测试文件
 ## 2021年9月22日22点07分 第一次主干分支提交文件
     git就像一棵树，无数开发者就像是树根，共同合作，供养主干分支；
+    同时开发分支又像是树叶，在主干分支中各自建立分支，完成不同功能的开发，开花结果
+## 2021年9月22日22点17分 master分支的开发者也开发了一段代码
+    使用git工具可以大大提高软件开发效率，增强团队开发的版本管理与代码控制能力
+## 2021年9月22日22点19分 master分支代码的开发者通过沟通得知开发分支一修改了代码，决定合并分支，更新内容，使master分支版本统一
     同时开发分支又像是树叶，在主干分支中各自建立分支，完成各种不同功能的开发，开花结果
 ## 2021年9月22日22点14分
     开发分支1的开发者为master分支的文件新增了一段内容，并修改了一段代码
